--- a/tribute.html
+++ b/tribute.html
@@ -38,30 +38,21 @@
         <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="assets/img/Explora-removebg-preview.png" class="img-fluid" alt="Responsive image"></a></h1>
         <nav id="navbar" class="navbar">
           <ul>
-            <li class="dropdown"><a class="nav-link scrollto active" href="#hero"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
-              <ul>
-                <li><a href="#hero">Getting Started</a></li>
-                <li><a href="#carouselExampleControls">News & Researches</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#comments">Comments</a></li>
-                <li><a href="#footer">Contact</a></li>
-              </ul>
-            </li>
-            <li class="dropdown"><a class="nav-link scrollto" href="#hero"><span>Life On Mars</span> <i class="bi bi-chevron-down"></i></a>
+            <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+            <li class="dropdown"><a class="nav-link scrollto" href="portfolio-details.html"><span>Life On Mars</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="portfolio-details.html#main">About Mars</a></li>
                 <li><a href="portfolio-details.html#mars_update">Research Update</a></li>
-                <li><a href="portfolio-details.html#footer">Contact</a></li>
               </ul>
             </li>
-            <li class="dropdown"><a class="nav-link scrollto" href="#hero"><span>Article</span> <i class="bi bi-chevron-down"></i></a>
+            <li class="dropdown"><a class="nav-link scrollto" href="Article.html"><span>Article</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="Article.html">The Solar System</a></li>
                 <li><a href="Article.html#tbbt">The Big Bang</a></li>
               </ul>
             </li>
             <li><a class="nav-link scrollto " href="library.html">Library</a></li>
-            <li class="dropdown"><a class="nav-link scrollto" href="#hero"><span>Tribute</span> <i class="bi bi-chevron-down"></i></a>
+            <li class="dropdown"><a class="nav-link scrollto" href="tribute.html"><span>Tribute</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="tribute.html">Astronauts</a></li>
                 <li><a href="tribute.html#sci">Scientists</a></li>
@@ -69,13 +60,11 @@
             </li>
             <li class="dropdown"><a href="media.html"><span>Media</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Movies & Documentaries</a></li>
+                <li><a href="media.html#chobi">Gallery</a></li>
+                <li><a href="media.html#cholochitro">Documentaries</a></li>
               </ul>
             </li>
             <li><a class="nav-link scrollto" href="about.html">About</a></li>
-            <li><a class="nav-link scrollto" href="signup page .html">Log In</a></li>
-            <li><li><a class="nav-link scrollto" href="#contact"><img src="assets/img/sakib.jpg" alt="Avatar" class="avatar"></a></li></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -130,10 +119,10 @@
     </div><br><br>
     <div class="row">
       <div class="col-md-2">
-        <img src="assets/img/farhan.jpg" alt="..." class="img-thumbnail">
+        <img src="assets/img/sara.jpg" alt="..." class="img-thumbnail">
       </div>
       <div class="col-md-10">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet doloremque iste delectus? Officia corrupti quia aliquam est distinctio eius incidunt aut provident possimus, soluta, voluptatum harum quis perspiciatis, veniam magnam. Sapiente sed, rerum iure dicta quae totam harum quaerat temporibus saepe omnis et velit animi debitis non nesciunt  Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
       </div>
     </div><br><br>
 </div><br>
@@ -188,21 +177,32 @@
       </div>
     </div>
   </div>
-
   <div class="container">
-    <div class="copyright">
-      &copy; Copyright <strong>Explora</strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-      <!--
-      All the links in the footer should remain intact.
-      You can delete the links only if you purchased the pro version.
-      Licensing information: https://bootstrapmade.com/license/
-      Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-    -->
-      Designed by <a href="https://bangladesh.gov.bd/index.php" target="_blank">Government of Bangladesh</a>
+    <div class="row">
+
+      <div class="col-lg-3 col-md-6 copyright">
+        &copy; Copyright <strong>Explora</strong>. All Rights Reserved
+      </div>
+
+      <div class="col-lg-3 col-md-6 ">
+        
+      </div>
+
+      <div class="col-lg-3 col-md-6 ">
+        
+
+      </div>
+
+      <div class="col-lg-3 col-md-6 credits">
+        Designed by <a href="https://bangladesh.gov.bd/index.php" target="_blank">Government of Bangladesh</a>
+      </div>
+
     </div>
   </div>
+  
+  
+  
+  
 </footer>
 <!-- End Footer -->
 
