--- a/Article.html
+++ b/Article.html
@@ -65,6 +65,7 @@
                 </ul>
               </li>
               <li><a class="nav-link scrollto" href="about.html">About</a></li>
+              <li><a class="nav-link scrollto" href="signup page .html">Log In</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav><!-- .navbar -->
@@ -81,10 +82,10 @@
           <img src="assets/img/mars.jfif" alt="..." class="img-thumbnail" data-aos="zoom-in">
         </div>
         <div class="col-md-10" data-aos="zoom-in">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. <a href="comments.html"><u>Reply</u></a>
         </div>
       </div><br><br>
-      <div class="row">
+      <div class="row" id="atc">
         <div class="col-md-10" data-aos="zoom-in">
           Mars is an obvious source of inspiration for science fiction stories. It is familiar and well-studied, yet different and far enough away to compel otherworldly adventures. NASA has its sights on the Red Planet for many of the same reasons. Robots, including the Perseverance rover launching soon to Mars, teach us about what it’s like on the surface. That intel helps inform future human missions to the Red Planet. We’ll also need to outfit spacecraft and astronauts with technologies to get them there, explore the surface, and safely return them home. The roundtrip mission, including time in transit – from and back to Earth – and on the Martian surface, will take about two years. Technology development has already begun to enable a crewed Mars mission as early as the 2030s. Many of the capabilities will be demonstrated at the Moon first, during the Artemis missions, while other systems are more uniquely suited for deeper space. <a href=""><u>Reply</u></a></div>
         <div class="col-md-2">
@@ -96,7 +97,7 @@
           <img src="assets/img/mars.jfif" alt="..." class="img-thumbnail" data-aos="zoom-in">
         </div>
         <div class="col-md-10" data-aos="zoom-in">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. <a href="comments.html"><u>Reply</u></a>
         </div>
       </div>
 
@@ -112,9 +113,9 @@
       </div><br><br>
       <div class="row">
         <div class="col-md-10" data-aos="zoom-in">
-          SpaceX successfully launched its first Falcon 9 rocket of the year Thursday (Jan. 6), sending a new stack of Starlink satellites into orbit from Florida, before nailing a landing at sea. The previously flown Falcon 9 rocket blasted off at 4:49 p.m. EST (2149 GMT) from Space Launch Complex 40 at Cape Canaveral Space Force Station here in Florida, carrying a stack of 49 Starlink satellites. Approximately nine minutes after liftoff, the rocket's first stage returned to Earth and touched down on the deck of SpaceX's newest drone ship, "A Shortfall of Gravitas," marking the company's first successful launch and landing of the new year. "Falcon 9 has successfully lifted off from Launch Complex 39 at Kennedy Space Center, carrying our stack of 49 Starlink satellites to low Earth orbit," SpaceX engineer Jessie Anderson said during the launch broadcast. <a href=""><u>Reply</u></a> </div>
+          SpaceX successfully launched its first Falcon 9 rocket of the year Thursday (Jan. 6), sending a new stack of Starlink satellites into orbit from Florida, before nailing a landing at sea. The previously flown Falcon 9 rocket blasted off at 4:49 p.m. EST (2149 GMT) from Space Launch Complex 40 at Cape Canaveral Space Force Station here in Florida, carrying a stack of 49 Starlink satellites. Approximately nine minutes after liftoff, the rocket's first stage returned to Earth and touched down on the deck of SpaceX's newest drone ship, "A Shortfall of Gravitas," marking the company's first successful launch and landing of the new year. "Falcon 9 has successfully lifted off from Launch Complex 39 at Kennedy Space Center, carrying our stack of 49 Starlink satellites to low Earth orbit," SpaceX engineer Jessie Anderson said during the launch broadcast.<a href="comments1.html"><u>Reply</u></a> </div>
         <div class="col-md-2">
-          <img src="assets/img/saocom1b_1.jpg.crdownload" class="img-thumbnail" alt="Responsive image" style="height: 180px;" data-aos="zoom-in">
+          <img src="assets/img/spacex.jfif" class="img-thumbnail" alt="Responsive image" style="height: 180px;" data-aos="zoom-in">
         </div>
       </div><br><br>
       <div class="row" id="article6">
