--- a/admin.html
+++ b/admin.html
@@ -53,7 +53,7 @@
 </script>
 <script src="assets/js/comments.js"></script>
 
-<body onload="showComment()" style="background-image: url(assets/img/gradientwhite.jpg); background-repeat: no-repeat; background-size: cover; position: relative;">
+<body onload="show()" style="background-image: url(assets/img/gradientwhite.jpg); background-repeat: no-repeat; background-size: cover; position: relative;">
 
     <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center header-transparent" style="background: rgba(86, 57, 150, 0.9);">
@@ -111,9 +111,9 @@
             <h4 class="comments-count">Comments</h4>
                 <div class="blog-comments"  id="blog-comments">
     
-                  <div id="comment-1" class="outter" style="display: none;">
+                  <div id="comment-1" class="outter" style="display: none; background-color: white;" >
                     <div>
-                        <h4><strong>Georgia Reader</strong></h4>
+                        <h4 style="color: rgb(6, 101, 124)"><b>Georgia Reader</b></h4>
                         <p>
                           Et rerum totam nisi. Molestiae vel quam dolorum vel voluptatem et et. Est ad aut sapiente quis molestiae est qui cum soluta.
                           Vero aut rerum vel. Rerum quos laboriosam placeat ex qui. Sint qui facilis et.
