--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 </ul>
               </li>
               <li><a class="nav-link scrollto" href="about.html">About</a></li>
+              <li><a class="nav-link scrollto" href="signup page .html">Log In</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav><!-- .navbar -->
@@ -213,7 +214,7 @@
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">Explora</small>
-                    <a href="https://www.youtube.com/watch?v=Zc5th7BHy9s" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
+                    <a href="Article.html#tbbt" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
                   </div>
                 </div>
               </div>
