--- a/media.html
+++ b/media.html
@@ -92,6 +92,7 @@
                 </ul>
               </li>
               <li><a class="nav-link scrollto" href="about.html">About</a></li>
+              <li><a class="nav-link scrollto" href="signup page .html">Log In</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav><!-- .navbar -->
@@ -113,23 +114,23 @@
                 <h3 class="sidebar-title">Categories</h3>
                 <div class="sidebar-item categories">
                   <ul>
-                    <li><a href="#">Images <span>(25)</span></a></li>
-                    <li><a href="#">Videos <span>(12)</span></a></li>
+                    <li><a href="media.html#chobi">Images <span>(25)</span></a></li>
+                    <li><a href="media.html#cholochitro">Videos <span>(12)</span></a></li>
                   </ul>
                 </div>
                 <h3 class="sidebar-title">Recent Posts</h3>
                 <div class="sidebar-item recent-posts">
                   <div class="post-item clearfix">
                     <img src="assets/img/hero-carousel/Black_hole_-_Messier_87_crop_max_res.jpg" alt="">
-                    <h4><a href="blog-single.html">Nihil blanditiis at in nihil autem</a></h4>
+                    <h4><a href="Article.html#tbbt">Nihil blanditiis at in nihil autem</a></h4>
                   </div>
                   <div class="post-item clearfix">
                     <img src="assets/img/urc group photo-1.jpeg" alt="">
-                    <h4><a href="blog-single.html">Quidem autem et impedit</a></h4>
+                    <h4><a href="Article.html#tbbt">Quidem autem et impedit</a></h4>
                   </div>
                   <div class="post-item clearfix">
                     <img src="assets/img/satellite4.jpg" alt="">
-                    <h4><a href="blog-single.html">Id quia et et ut maxime similique occaecati ut</a></h4>
+                    <h4><a href="Article.html#tbbt">Id quia et et ut maxime similique occaecati ut</a></h4>
                   </div>
                 </div>
               </div>
@@ -137,17 +138,17 @@
           </div><br><br>
           <h2 style="text-align: center;" id="chobi"><strong>Images</strong></h2>
           <div class="row">
-            <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+            <div class="col-lg-4 col-md-12 mb-4 mb-lg-0" >
               <img
                 src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
                 class="w-100 shadow-1-strong rounded mb-4"
-                alt="Boat on Calm Water"
+                alt="Boat on Calm Water" data-aos="fade-down"
               />
 
               <img
                 src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain1.webp"
                 class="w-100 shadow-1-strong rounded mb-4"
-                alt="Wintry Mountain Landscape"
+                alt="Wintry Mountain Landscape" data-aos="fade-up"
               />
             </div>
 
@@ -155,13 +156,13 @@
               <img
                 src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain2.webp"
                 class="w-100 shadow-1-strong rounded mb-4"
-                alt="Mountains in the Clouds"
+                alt="Mountains in the Clouds" data-aos="fade-up"
               />
 
               <img
                 src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
                 class="w-100 shadow-1-strong rounded mb-4"
-                alt="Boat on Calm Water"
+                alt="Boat on Calm Water" data-aos="fade-down"
               />
             </div>
 
@@ -169,19 +170,19 @@
               <img
                 src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(18).webp"
                 class="w-100 shadow-1-strong rounded mb-4"
-                alt="Waves at Sea"
+                alt="Waves at Sea" data-aos="fade-up"
               />
 
               <img
               src ="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain3.webp"
                 class="w-100 shadow-1-strong rounded mb-4"
-                alt="Yosemite National Park"
+                alt="Yosemite National Park" data-aos="fade-down"
               />
             </div>
           </div>
 
           <h2 style="text-align: center;" id="cholochitro"><strong>Videos</strong></h2>
-          <div class="row">
+          <div class="row" data-aos="fade-down">
             <div class="column">
               <iframe width="400" height="300" src="https://www.youtube.com/embed/2HoTK_Gqi2Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
@@ -192,7 +193,7 @@
               <iframe width="400" height="300" src="https://www.youtube.com/embed/kOEDG3j1bjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div><br>
-          <div class="row">
+          <div class="row" data-aos="fade-down">
             <div class="column">
               <iframe id="urc" width="400" height="300" src="https://www.youtube.com/embed/Zc5th7BHy9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
