--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -65,6 +65,7 @@
                 </ul>
               </li>
               <li><a class="nav-link scrollto" href="about.html">About</a></li>
+              <li><a class="nav-link scrollto" href="signup page .html">Log In</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav><!-- .navbar -->
@@ -131,7 +132,7 @@
           <img class="card-img-top" src="assets/img/marrover.jfif" alt="Card image cap">
           <div class="card-body">
             <p class="card-title"><strong>Nasa thinks about sending civilians to mars to promote its vision for interterrestrial settlement</strong> </p>
-            <a href="#" class="btn btn-primary">View Story</a>
+            <a href="Article.html#atc" class="btn btn-primary">View Story</a>
           </div>
         </div>
       </div>
@@ -140,7 +141,7 @@
           <img class="card-img-top" src="assets/img/marrover.jfif" alt="Card image cap">
           <div class="card-body">
             <p class="card-title"><strong>Nasa thinks about sending civilians to mars to promote its vision for interterrestrial settlement</strong> </p>
-            <a href="#" class="btn btn-primary">View Story</a>
+            <a href="Article.html#atc" class="btn btn-primary">View Story</a>
           </div>
         </div>
       </div>
@@ -149,7 +150,7 @@
           <img class="card-img-top" src="assets/img/marrover.jfif" alt="Card image cap">
           <div class="card-body">
             <p class="card-title"><strong>Nasa thinks about sending civilians to mars to promote its vision for interterrestrial settlement</strong> </p>
-            <a href="#" class="btn btn-primary">View Story</a>
+            <a href="Article.html#atc" class="btn btn-primary">View Story</a>
           </div>
         </div>
       </div>
@@ -158,7 +159,7 @@
           <img class="card-img-top" src="assets/img/marrover.jfif" alt="Card image cap">
           <div class="card-body">
             <p class="card-title"><strong>Nasa thinks about sending civilians to mars to promote its vision for interterrestrial settlement</strong> </p>
-            <a href="#" class="btn btn-primary" >View Story</a>
+            <a href="Article.html#atc" class="btn btn-primary" >View Story</a>
           </div>
         </div>
       </div>
