--- a/tribute.html
+++ b/tribute.html
@@ -65,6 +65,7 @@
               </ul>
             </li>
             <li><a class="nav-link scrollto" href="about.html">About</a></li>
+            <li><a class="nav-link scrollto" href="signup page .html">Log In</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
