--- a/index.html
+++ b/index.html
@@ -163,19 +163,6 @@
                 </div>
               </div>
               <div class="col" data-aos="fade-up">
-                <div class="card h-100" >
-                  <img src="assets/img/satellite4.jpg" class="card-img-top" alt="..." style="height: 300px;">
-                  <div class="card-body">
-                    <h5 class="card-title"><b>Bangabandhu Satellite- A huge breakthrough for Bangladesh</b></h5>
-                    <p class="card-text">Bangabandhu 1 (BD-1), the first geostationary communications satellite of Bangladesh, was developed by the Bangladesh Telecommunication Regulatory Commission (BTRC). The satellite was launched into geostationary earth orbit (GEO) in May 2018.</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">The Daily Star</small>
-                    <a href="https://www.thedailystar.net/science/bangladesh-first-commercial-satellite-bangabandhu-1-open-doors-huge-opportunities-1575277" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col" data-aos="fade-left">
                 <div class="card h-100">
                   <img src="assets/img/hero-carousel/Black_hole_-_Messier_87_crop_max_res.jpg" class="card-img-top" alt="..." style="height: 300px;">
                   <div class="card-body">
@@ -185,6 +172,19 @@
                   <div class="card-footer">
                     <small class="text-muted">Explora</small>
                     <a href="Article.html#article6" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col" data-aos="fade-left">
+                <div class="card h-100" >
+                  <img src="assets/img/satellite4.jpg" class="card-img-top" alt="..." style="height: 300px;">
+                  <div class="card-body">
+                    <h5 class="card-title"><b>Bangabandhu Satellite- A huge breakthrough for Bangladesh</b></h5>
+                    <p class="card-text">Bangabandhu 1 (BD-1), the first geostationary communications satellite of Bangladesh, was developed by the Bangladesh Telecommunication Regulatory Commission (BTRC). The satellite was launched into geostationary earth orbit (GEO) in May 2018.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">The Daily Star</small>
+                    <a href="https://www.thedailystar.net/science/bangladesh-first-commercial-satellite-bangabandhu-1-open-doors-huge-opportunities-1575277" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
                   </div>
                 </div>
               </div>
@@ -227,7 +227,7 @@
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">Explora</small>
-                    <button type="button" class="btn btn-dark" style="float: right;">View Story</button>
+                    <a href="tribute.html" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
                   </div>
                 </div>
               </div>
