--- a/tribute.html
+++ b/tribute.html
@@ -75,54 +75,54 @@
   </div>
 </header><!-- End Header -->
 <div class="container" style="background-color: rgba(201, 206, 214, 0.979); padding:15px;">
-    <section class="breadcrumbs" style="height: 80px; margin-top: 0px;"><h2 style="text-align: center;"><strong>Astronauts</strong></h2><br><br></section>
+    <section id="sci" class="breadcrumbs" style="height: 80px; margin-top: 0px;"><h2 style="text-align: center;"><strong>Scientists</strong></h2><br><br></section>
     <br>
     <div class="row">
-      <div class="col-md-2">
-        <img src="assets/img/ishrat.jpg" alt="..." class="img-thumbnail">
+      <div class="col-md-2"  data-aos="zoom-in">
+        <img src="assets/img/albert-einstein.jpg" alt="..." class="img-thumbnail" >
       </div>
-      <div class="col-md-10">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
+      <div class="col-md-10"  data-aos="zoom-in">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae nobis est cum fugit veritatis ad voluptas animi accusamus nihil quod aliquam omnis minima dolorem, velit culpa ullam itaque voluptatibus natus amet. Soluta unde facere nemo eius aliquam reiciendis ex quo! Neque perspiciatis cupiditate aliquam pariatur doloribus? Facere sint fuga quae aspernatur minus, provident nihil maiores praesentium est quidem officiis eius! Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
       </div>
     </div><br><br>
     <div class="row">
-      <div class="col-md-10">
+      <div class="col-md-10"  data-aos="zoom-in">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. </div>
-      <div class="col-md-2">
+      <div class="col-md-2"  data-aos="zoom-in">
         <img src="assets/img/mahdi.jpg" alt="..." class="img-thumbnail">
       </div>
     </div><br><br>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-2"  data-aos="zoom-in">
         <img src="assets/img/sakib.jpg" alt="..." class="img-thumbnail">
       </div>
-      <div class="col-md-10">
+      <div class="col-md-10"  data-aos="zoom-in"> 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
       </div>
     </div>
 
-    <section id="sci"class="breadcrumbs" style="height: 80px;"><h2 style="text-align: center;"><strong>Scientists</strong></h2><br><br></section>
+    <section class="breadcrumbs" style="height: 80px;"><h2 style="text-align: center;"><strong>Astronauts</strong></h2><br><br></section>
     <br>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-2"  data-aos="zoom-in">
         <img src="assets/img/farhan.jpg" alt="..." class="img-thumbnail">
       </div>
-      <div class="col-md-10">
+      <div class="col-md-10"  data-aos="zoom-in">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
       </div>
     </div><br><br>
     <div class="row">
-      <div class="col-md-10">
+      <div class="col-md-10"  data-aos="zoom-in">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. </div>
-      <div class="col-md-2">
+      <div class="col-md-2"  data-aos="zoom-in">
         <img src="assets/img/farhan.jpg" alt="..." class="img-thumbnail">
       </div>
     </div><br><br>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-2"  data-aos="zoom-in">
         <img src="assets/img/sara.jpg" alt="..." class="img-thumbnail">
       </div>
-      <div class="col-md-10">
+      <div class="col-md-10"  data-aos="zoom-in">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet doloremque iste delectus? Officia corrupti quia aliquam est distinctio eius incidunt aut provident possimus, soluta, voluptatum harum quis perspiciatis, veniam magnam. Sapiente sed, rerum iure dicta quae totam harum quaerat temporibus saepe omnis et velit animi debitis non nesciunt  Sit quasi dolore at vitae distinctio? Omnis molestiae iste placeat eos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit numquam a libero eum laborum iste distinctio ipsam sint sit similique, totam ipsa dolores tempora quibusdam laudantium sunt deserunt tempore. Quibusdam doloremque rerum omnis enim voluptatum fuga accusantium totam amet suscipit perspiciatis a, recusandae voluptates. Sequi, inventore corporis vero, laborum at animi quaerat maiores dolore dolor vel quas necessitatibus ipsam laboriosam dignissimos impedit eius esse quasi? Ut dolor commodi sapiente harum repellat, omnis iure nihil aspernatur neque doloremque rerum itaque! Ipsa unde dolorum architecto? Voluptatem, soluta quisquam ullam qui veniam officiis aut, iste culpa illo dignissimos quae vero voluptatum quod. 
       </div>
     </div><br><br>
