--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   </div>
                   <div class="card-footer">
                     <small class="text-muted">Explora</small>
-                    <a href="tribute.html" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
+                    <a href="tribute.html#sci" target="_blank" class="btn btn-dark" role="button" style="float: right;">View Story</a>
                   </div>
                 </div>
               </div>
