--- a/tribute.html
+++ b/tribute.html
@@ -74,8 +74,8 @@
 
   </div>
 </header><!-- End Header -->
-<div class="container" style="background-color: rgba(201, 206, 214, 0.979); padding:15px;">
-    <section id="sci" class="breadcrumbs" style="height: 80px; margin-top: 0px;"><h2 style="text-align: center;"><strong>Scientists</strong></h2><br><br></section>
+<div class="container" id="sci" style="background-color: rgba(201, 206, 214, 0.979); padding:15px;">
+    <section class="breadcrumbs" style="height: 80px; margin-top: 0px;"><h2 style="text-align: center;"><strong>Scientists</strong></h2><br><br></section>
     <br>
     <div class="row">
       <div class="col-md-2"  data-aos="zoom-in">
