--- a/tribute.html
+++ b/tribute.html
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <section class="breadcrumbs" style="height: 80px;"><h2 style="text-align: center;"><strong>Astronauts</strong></h2><br><br></section>
+    <section id="ast" class="breadcrumbs" style="height: 80px;"><h2 style="text-align: center;"><strong>Astronauts</strong></h2><br><br></section>
     <br>
     <div class="row">
       <div class="col-md-2"  data-aos="zoom-in">
