Explora- Into The Unknown

--- a/admin.html
+++ b/admin.html
@@ -80,7 +80,7 @@
               <li><a class="nav-link scrollto " href="library.html">Library</a></li>
               <li class="dropdown"><a class="nav-link scrollto" href="tribute.html"><span>Tribute</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
-                  <li><a href="tribute.html">Astronauts</a></li>
+                  <li><a href="tribute.html#ast">Astronauts</a></li>
                   <li><a href="tribute.html#sci">Scientists</a></li>
                 </ul>
               </li>
